feat: Add categories

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="read_more">Read More</string>
 
     <string name="find_your_movies">Find your movies</string>
+    <string name="categories">Categories</string>
     <string name="search_here">Search Here …</string>
     <string name="about_movie">About Movie</string>
     <string name="retry">Retry</string>
@@ -22,4 +23,8 @@
     <string name="dummy_overview">Peter Parker is unmasked and no longer able to separate his normal life from the high-stakes of being a super-hero. When he asks for help from Doctor Strange the stakes become even more dangerous, forcing him to discover what it truly means to be Spider-Man</string>
     <string name="dummy_rate_count">11747</string>
     <string name="dummy_popularity">9695.89</string>
+
+    <string name="error_connection">No Internet Connection</string>
+    <string name="error_unexpected">An unexpected error occurred</string>
+    <string name="top_rated">Top Rated</string>
 </resources>
