feat: Get movie by genre

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="read_more">Read More</string>
 
     <string name="find_your_movies">Find your movies</string>
-    <string name="categories">Categories</string>
+    <string name="genres">Genres</string>
     <string name="search_here">Search Here …</string>
     <string name="about_movie">About Movie</string>
     <string name="retry">Retry</string>
