--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,9 @@
     <string name="dummy_overview">Peter Parker is unmasked and no longer able to separate his normal life from the high-stakes of being a super-hero. When he asks for help from Doctor Strange the stakes become even more dangerous, forcing him to discover what it truly means to be Spider-Man</string>
     <string name="dummy_rate_count">11747</string>
     <string name="dummy_popularity">9695.89</string>
+    <string name="dummy_name">John Doe</string>
+    <string name="dummy_review">From DC Comics comes the Suicide Squad, an antihero team of incarcerated supervillains who act as deniable assets for the United States government.</string>
+    <string name="dummy_rating">5.0</string>
 
     <string name="error_connection">No Internet Connection</string>
     <string name="error_unexpected">An unexpected error occurred</string>
