--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="top_rated">Top Rated</string>
     <string name="trailer">Trailer</string>
     <string name="trailers">Trailers</string>
+    <string name="reviews">Reviews</string>
 </resources>
