--- a/styling/src/main/res/values/strings.xml
+++ b/styling/src/main/res/values/strings.xml
@@ -36,4 +36,5 @@
     <string name="reviews">Reviews</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_favorite">Favorite</string>
 </resources>
